name:                hangman
version:             0.1.0.0
synopsis:            Playing Hangman
description:         Hangman Game
homepage:            https://github.com/ArulselvanMadhavan/hangman#readme
license:             BSD3
license-file:        LICENSE
author:              Arulselvan Madhavan
maintainer:          arulselvan1234@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     , data/dict.txt

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                       , random
                       , split
